fixed typo and lifted commentary background color

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </output>
         <div>
             <h3>What this is:</h3>
-            <p>This is an active background / artsy thing. Those triangles pick a different color depending on the underlying information provided by a 2d <a href="https://www.npmjs.org/package/open-simplex-noise">open simplex noise</a> implementation. The position is shifted each frame which results in the apperent traversing.</p>
+            <p>This is an active background / artsy thing. Those triangles pick a different color depending on the underlying information provided by a 2d <a href="https://www.npmjs.org/package/open-simplex-noise">open simplex noise</a> implementation. The position is shifted each frame which results in the apparent traversing.</p>
             
             <h3>Usage:</h3>
             <p>You can manipulate the width of the triangles with the <kbd>wheel</kbd> or the <kbd>+</kbd> and <kbd>-</kbd> keys.</p>
