fixed trai -> tria typo

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <aside>
         <output>
             <table><tbody>
-                <tr><td>Traingle Count:</td><td id="out-triangle-count"></td></tr>
+                <tr><td>Triangle Count:</td><td id="out-triangle-count"></td></tr>
                 <tr><td>Positive noise:</td><td id="out-positive-noise"></td></tr>
                 <tr><td>Fames per Second:</td><td id="out-frames-per-second"></td></tr>
-                <tr><td>Traingle Width:</td><td id="out-triangle-width"></td></tr>
+                <tr><td>Triangle Width:</td><td id="out-triangle-width"></td></tr>
             </tbody></table>
         </output>
         <div>
