--- a/index.html
+++ b/index.html
@@ -24,21 +24,15 @@
 
 <body>
     <aside>
-        <output>
-            <table><tbody>
-                <tr><td>Triangle Count:</td><td id="out-triangle-count"></td></tr>
-                <tr><td>Positive noise:</td><td id="out-positive-noise"></td></tr>
-                <tr><td>Fames per Second:</td><td id="out-frames-per-second"></td></tr>
-                <tr><td>Triangle Width:</td><td id="out-triangle-width"></td></tr>
-            </tbody></table>
-        </output>
-        <div>
+        <output id="statistics"></output>
+        <div id="project-description">
             <h3>What this is:</h3>
             <p>This is an active background / artsy thing. Those triangles pick a different color depending on the underlying information provided by a 2d <a href="https://www.npmjs.org/package/open-simplex-noise">open simplex noise</a> implementation. The position is shifted each frame which results in the apparent traversing.</p>
             
             <h3>Usage:</h3>
             <p>You can manipulate the width of the triangles with the <kbd>wheel</kbd> or the <kbd>+</kbd> and <kbd>-</kbd> keys.</p>
         </div>
+        <div id="color-definer-options"></div>
     </aside>
     <canvas width="1280" height="720"></canvas>
 </body>
